--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ padding:0 0 0 60px;
 min-height:50px;
 }
 
-a { color:#ff9900; text-decoration:none; outline:none}
+a { color:#03567e; text-decoration:none; outline:none}
 a:hover { text-decoration:underline;}
 a:active { color:#666;}
 
@@ -87,7 +87,7 @@ ul#navigation li a {  padding:8px 8px 4px 0; margin-bottom:0px; display:inline-b
 /* =============================================== */
 
 .intro h1 { font-weight:normal; line-height:1.11em; margin-bottom:10px; color:#666;}
-.intro h2 { font-size:50px; color:#ff9900;  font-weight:bold;}
+.intro h2 { font-size:50px; color:#03567e;  font-weight:bold;}
 .intro ul { 
 	padding-left: 30px;
 }
@@ -96,7 +96,7 @@ ul#navigation li a {  padding:8px 8px 4px 0; margin-bottom:0px; display:inline-b
 .examples .col-3 { overflow:hidden;}
 .examples .col-3 a { color:#aaa; font-size:16px; line-height:1.31em; position:relative;}
 .examples .col-3 a strong { display:block; color:#666;font-size:16px; margin:0 0 2px 0;}
-.examples .col-3 a em { color:#ff9900; font-family:georgia,serif; display:block; margin:2px 0 0 0; }
+.examples .col-3 a em { color:#03567e; font-family:georgia,serif; display:block; margin:2px 0 0 0; }
 .examples .col-3 a span { background:rgb(0,0,0);  background:rgba(0,0,0,0.9); display:block; top:-90px; position:absolute; padding:15px 8px;}
 .examples .col-3 a:hover { opacity:0.5;}
 
@@ -118,4 +118,4 @@ ul#navigation li a {  padding:8px 8px 4px 0; margin-bottom:0px; display:inline-b
 .footer .col-6 p { font-size:inherit; color:#444;}
 .footer .col-3 p { text-align:right; opacity:1;}
 
-.titletext {font-size: 40px; color:#ff9900; text-align:right;}
+.titletext {font-size: 40px; color:#03567e; text-align:right;}
