--- a/style.css
+++ b/style.css
@@ -119,3 +119,26 @@ ul#navigation li a {  padding:8px 8px 4px 0; margin-bottom:0px; display:inline-b
 .footer .col-3 p { text-align:right; opacity:1;}
 
 .titletext {font-size: 40px; color:#03567e; text-align:right;}
+
+.btn-success {
+font-size: 21px;
+padding: 14px 24px;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+-webkit-border-radius: 6px;
+-moz-border-radius: 6px;
+border-radius: 6px;
+color: #ffffff;
+text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+background-color: #5bb75b;
+background-image: -moz-linear-gradient(top, #62c462, #51a351);
+background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
+background-image: -webkit-linear-gradient(top, #62c462, #51a351);
+background-image: -o-linear-gradient(top, #62c462, #51a351);
+background-image: linear-gradient(to bottom, #62c462, #51a351);
+background-repeat: repeat-x;
+border-color: #51a351 #51a351 #387038;
+border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
+filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
