--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 * { margin:0; padding:0; border:0;}
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
 
-body { background: #fff; background: url('images/bg.png') fixed repeat; color:#888; font-family:helvetica, arial, sans-serif;}
+body { background: #fff; background: url('images/bg.png') fixed repeat; color:#888; font-family:'Capriola',helvetica, arial, sans-serif;}
 
 blockquote {
 background:url(images/quote.gif) no-repeat top left;
@@ -49,9 +49,9 @@ li { margin:0 0 10px 15px; list-style:square; font-size:18px; line-height:1.4em;
 #wrapper { background:url('images/grad-sphere.png') fixed no-repeat center top}
 #content { width:925px; margin:0 auto; padding:100px 0 0 0; }
 
-ul#navigation { position:fixed; top:60px; margin-left:-40px;}
-ul#navigation li { list-style:none; font-size:16px; margin:0 0 5px 0; text-shadow:1px 1px 2px #fff; text-align: right;}
-ul#navigation li a {  padding:0px 8px 0	px 0; margin-bottom:0px; display:inline-block; text-align: right;}
+ul#nav { position:fixed; top:60px; margin-left:-40px;}
+ul#nav li { list-style:none; font-size:16px; margin:0 0 15px 0; text-shadow:1px 1px 2px #fff; text-align: right;}
+ul#nav li a {  padding:0px 8px 0	px 0; margin-bottom:0px; display:inline-block; text-align: right;}
 
 .block { border-bottom:1px solid #222; margin: 40px 0; padding:50 0 50px 0;}
 .block:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
