--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ padding:0 0 0 60px;
 min-height:50px;
 }
 
-a { color:#03567e; text-decoration:none; outline:none}
+a { color:#03567e; text-decoration:none; font-weight:bold;}
 a:hover { text-decoration:underline;}
 a:active { color:#666;}
 
