--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ h1 { font-size:40px; font-weight:normal;}
 .title  { font-size:60px;}
 
 h2 { font-size:30px; margin-bottom:34px;}
-h2 + p { margin-top:-30px;}
+h2 + p { margin-top:30px;}
 p + p { margin-top:-10px;}
 p + ul { margin-top:-16px;}
 h2 + ul { margin-top:-20px;}
 
-h3 { font-size:20px; margin-bottom:3px;}
+h3 { font-size:20px; margin-top:-10px;margin-bottom:3px;}
 h4 { font-size:16px;font-weight:bold; }
 
 p { margin:0 0 25px 0; line-height:1.4em; font-size:18px; letter-spacing:0.5px;}
