--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ ul#nav li a {  padding:0px 8px 0	px 0; margin-bottom:0px; display:inline-block; 
 .block { border-bottom:1px solid #222; margin: 40px 0; padding:50 0 50px 0;}
 .block:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
 
+.headerblock {margin:30px; width:253px; text-align:center; float:left }
 .twitterblock {margin:10px; width:253px; text-align:center; float:left }
 .logo { padding-bottom:30px;}
 
